Update social media links in index.html

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <h1>Hi!</h1>
     <p>I am Rishabh Gupta, currently pursuing BS in Data Science & Applications from IIT Madras.</p>
     <h3>Contact me:</h3>
-    <a href="https://www.instagram.com/imris_17?utm_source=qr&igsh=MXVnaXJrcWphMnh2eQ==" target="_blank">Instagram</a>
+    <a href="https://www.instagram.com/rishv.17?utm_source=qr&igsh=MXVnaXJrcWphMnh2eQ==" target="_blank">Instagram</a>
     <a href="https://www.linkedin.com/in/imris17?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a>
-    <a href="https://x.com/ImRis_17?t=t4Gn4PtyYLl-Dv2x4hVmyg&s=09" target="_blank">Twitter/X</a>
-    <a href="https://www.facebook.com/share/1Ersv23uPk/" target="_blank">Facebook</a>
-    <a href="https://t.me/ImRis_17" target="_blank">Telegram</a>
+    <a href="https://x.com/rishv_17?t=t4Gn4PtyYLl-Dv2x4hVmyg&s=09" target="_blank">Twitter/X</a>
+    <a href="https://www.facebook.com/share/172YQRNVZG/" target="_blank">Facebook</a>
+    <a href="https://t.me/rishv_17" target="_blank">Telegram</a>
 </body>
 </html>
